[Feat] swagger-jsdoc 반영, user-recipe 구조 개선
