# back/src/swagger/swagger-output.json
@@ -318,6 +318,33 @@
                 }
             }
         },
+        "/posts/comments/{post}": {
+            "get": {
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "post",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/posts/comments/{id}": {
             "put": {
                 "description": "",
